Finalisation du html pour toutes les page de menu

--- a/site_production/restaurants/page_menu_4.html
+++ b/site_production/restaurants/page_menu_4.html
@@ -46,35 +46,41 @@
                 <div class="green__bar">
                 </div>
                 <!--Début de la carte principal-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Tartare de poulpe acidulé</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Au restes d'orange</p>
-                        <p class="bold">25€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-1" class="container__menu__cards">
+                      <h3>Tartare de poulpe acidulé</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Aux zestes d'orange</p>
+                          <span class="bold">25€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Velouté de légumes d'antan</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Carotte, panais, topinambour</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-2" class="container__menu__cards">
+                      <h3>Velouté de légumes d'antan</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Carotte,panais,topinambour</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 1.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Soupe à l'oignon</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Revisité</p>
-                        <p class="bold">20€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-3" class="container__menu__cards">
+                      <h3>Soupe à l'oignon</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Revisitée</p>
+                          <span class="bold">20€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -86,34 +92,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 2.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Coquilles Saint-Jacques</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Accompagnées d'une purée de panais</p>
-                        <p class="bold">40€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-1" class="container__menu__cards">
+                      <h3>Coquilles Saint-Jacques</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Accompagnées d'une purée de panais</p>
+                          <span class="bold">40€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Magret de canard</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et parmentier de pommes de terre</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-2" class="container__menu__cards">
+                      <h3>Magret de canard</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et parmentier de pommes de terre</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                        <p class="bold">44€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-3" class="container__menu__cards">
+                      <h3>Pigeonneau d'Ille-et-Vilaine</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Sur son lit de gnocchis aux légumes</p>
+                          <span class="bold">44€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -125,34 +137,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 3.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Pétales de violettes glacés</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et sa purée de noisettes</p>
-                        <p class="bold">18€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-1" class="container__menu__cards">
+                      <h3>Pétales de violettes glacés</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et sa purée de noisettes</p>
+                          <span class="bold">18€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Fondant au chocolat</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Revisité</p>
-                        <p class="bold">22€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-2" class="container__menu__cards">
+                      <h3>Fondant au chocolat</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Revisité</p>
+                          <span class="bold">22€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Millefeuille croustillant</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Myrtilles et pâte d'amande</p>
-                        <p class="bold">23€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-3" class="container__menu__cards">
+                      <h3>Millefeuille croustillant</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Myrtilles et pâte d'amande</p>
+                          <span class="bold">23€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
