--- a/site_production/restaurants/page_menu_2.html
+++ b/site_production/restaurants/page_menu_2.html
@@ -46,35 +46,41 @@
                 <div class="green__bar">
                 </div>
                 <!--Début de la carte principal-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Tartare de thon</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Assaisonné au yuzu</p>
-                        <p class="bold">25€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-1" class="container__menu__cards">
+                      <h3>Tartare de thon</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Assaisonné au yuzu</p>
+                          <span class="bold">25€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Bouchée de homard croustillant</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et sa farandole de petits légumes</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-2" class="container__menu__cards">
+                      <h3>Bouchée de homard croustillant</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et sa farandole de petits légumes</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 1.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Poulet rôti aux herbes de Provence</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et sa crème de truffe</p>
-                        <p class="bold">40€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-3" class="container__menu__cards">
+                      <h3>Poulet rôti aux herbes de Provence</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et sa crème de truffe</p>
+                          <span class="bold">40€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -86,34 +92,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 2.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Poulet rôti aux herbes de Provence</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et sa crème de truffe</p>
-                        <p class="bold">40€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-1" class="container__menu__cards">
+                      <h3>Poulet rôti aux herbes de Provence</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et sa crème de truffe</p>
+                          <span class="bold">40€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Langouste rôtie</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et ses légumes de saison</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-2" class="container__menu__cards">
+                      <h3>Langoustine rôti</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et ses légumes de saison</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Côte de boeuf Angus</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et sa purée de panais</p>
-                        <p class="bold">44€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-3" class="container__menu__cards">
+                      <h3>Côte de bœuf Angus</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et sa purée de panais</p>
+                          <span class="bold">44€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -125,34 +137,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 3.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Farandole de desserts</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Du chef</p>
-                        <p class="bold">18€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-1" class="container__menu__cards">
+                      <h3>Farandole de desserts</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Du chef</p>
+                          <span class="bold">18€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Crème brulée</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Revisitée</p>
-                        <p class="bold">22€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-2" class="container__menu__cards">
+                      <h3>Crème brulée</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Revisitée</p>
+                          <span class="bold">22€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Titamisu</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>À la noisette</p>
-                        <p class="bold">23€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-3" class="container__menu__cards">
+                      <h3>Tiramisu</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>À la noisette</p>
+                          <span class="bold">23€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
