--- a/site_production/restaurants/page_menu_3.html
+++ b/site_production/restaurants/page_menu_3.html
@@ -33,7 +33,7 @@
 
     <section class="container">
         <div class="title">
-            <h1>Le note enchantée</h1>
+            <h1>La note enchantée</h1>
             <div class="heart">
                 <i class="fa-regular fa-heart"></i>
             </div>
@@ -46,45 +46,53 @@
                 <div class="green__bar">
                 </div>
                 <!--Début de la carte principal-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Ravioles de foie gras</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Accompagnées de leur crème à la truffe</p>
-                        <p class="bold">25€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-1" class="container__menu__cards">
+                      <h3>Ravioles de foie gras</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Accompagnées de leur crème à la truffe</p>
+                          <span class="bold">25€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Fin de la carte principal-->
                 <!--Carte 1.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Caviar osciètre</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Sur blini à la farine de blé noir</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-2" class="container__menu__cards">
+                      <h3>Caviar osciètre</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Sur blini à la farine de blé noir</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 1.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Homard et espuma de potiron</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Marinées aux zestes d'orange</p>
-                        <p class="bold">20€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-3" class="container__menu__cards">
+                      <h3>Homard et espuma de potiron</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Marinés aux zestes d'orange</p>
+                          <span class="bold">20€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 1.4-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Foie gras de canard cuit entier</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Confiture de figue et pain toasté</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="enter-4" class="container__menu__cards">
+                      <h3>Foie gras de canard cuit entier</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Confiture de figue et pain toasté</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="enter-4"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -96,34 +104,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 2.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Noix de coquilles Saint-Jacques</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Sur lit de purée de céleri-rave</p>
-                        <p class="bold">40€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-1" class="container__menu__cards">
+                      <h3>Noix de coquilles Saint-Jacques</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Sur lit de purée de céleri-rave</p>
+                          <span class="bold">40€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Langoustine poêlée</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Purée de patate douce</p>
-                        <p class="bold">35€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-2" class="container__menu__cards">
+                      <h3>Langoustine poêlée</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Purée de patate douce</p>
+                          <span class="bold">35€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Mijoté de queue de boeuf</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Et riz sauvage aux zestes de citron</p>
-                        <p class="bold">45€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dishe-3" class="container__menu__cards">
+                      <h3>Mijoté de queue de bœuf</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Et riz sauvage aux zestes de citron</p>
+                          <span class="bold">45€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dishe-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
@@ -135,34 +149,40 @@
                 <div class="green__bar">
                 </div>
                 <!--Carte 3.1-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Macaron noisette et chocolat</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Glace au caramel brun et sel de Guérande</p>
-                        <p class="bold">18€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-1" class="container__menu__cards">
+                      <h3>Macaron noisette et chocolat</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Glace au caramel brun et sel de Guérande</p>
+                          <span class="bold">18€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-1"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.2-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Baba au rhum revisité</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Avec son coulis de citron</p>
-                        <p class="bold">22€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-2" class="container__menu__cards">
+                      <h3>Baba au rhum revisité</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Avec son coulis de citron</p>
+                          <span class="bold">22€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-2"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.3-->
-                <div class="menu__cards">
-                    <div class="menu__cards__title">
-                        <h3>Tarte au citron meringuée</h3>
-                    </div>
-                    <div class="menu__cards__txt__price">
-                        <p>Déstructurée</p>
-                        <p class="bold">23€</p>
-                    </div>
+                <div class="container__menu">
+                    <label for="dessert-3" class="container__menu__cards">
+                      <h3>Tarte au citron meringuée</h3> 
+                      <div class="container__menu__cards__price">
+                          <p>Déstructurée</p>
+                          <span class="bold">23€</span>
+                      </div>
+                    </label>
+                    <input type="checkbox" id="dessert-3"/>
+                    <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
         </div>
