Mise en place de l'integralité des coeurs ainsi que de leurs animations

--- a/site_production/index.html
+++ b/site_production/index.html
@@ -91,7 +91,13 @@
                             <p>Ménilmontant</p>
                         </div>
                         <div class="restaurants__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__container">
+                                <input type="checkbox" id="heartCheckbox_1" class="heart__checkbox">
+                                <label for="heartCheckbox_1" class="heart">
+                                <i class="far fa-heart heart-empty"></i>
+                                <i class="fas fa-heart heart-filled gradient"></i>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -109,7 +115,13 @@
                             <p>Charonne</p>
                         </div>
                         <div class="restaurants__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__container">
+                                <input type="checkbox" id="heartCheckbox_2" class="heart__checkbox">
+                                <label for="heartCheckbox_2" class="heart">
+                                <i class="far fa-heart heart-empty"></i>
+                                <i class="fas fa-heart heart-filled gradient"></i>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -124,7 +136,13 @@
                             <p>Cité Rouge</p>
                         </div>
                         <div class="restaurants__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__container">
+                                <input type="checkbox" id="heartCheckbox_3" class="heart__checkbox">
+                                <label for="heartCheckbox_3" class="heart">
+                                <i class="far fa-heart heart-empty"></i>
+                                <i class="fas fa-heart heart-filled gradient"></i>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -139,7 +157,13 @@
                             <p>Folie-Méricourt</p>
                         </div>
                         <div class="restaurants__cards__description__heart">
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart__container">
+                                <input type="checkbox" id="heartCheckbox_4" class="heart__checkbox">
+                                <label for="heartCheckbox_4" class="heart">
+                                <i class="far fa-heart heart-empty"></i>
+                                <i class="fas fa-heart heart-filled gradient"></i>
+                                </label>
+                            </div>
                         </div>
                     </div>
                 </a>
