--- a/site_production/restaurants/page_menu_2.html
+++ b/site_production/restaurants/page_menu_2.html
@@ -34,8 +34,12 @@
     <section class="container">
         <div class="title">
             <h1>Le délice des sens</h1>
-            <div class="heart">
-                <i class="fa-regular fa-heart"></i>
+            <div class="heart__container">
+                <input type="checkbox" id="heartCheckbox" class="heart__checkbox">
+                <label for="heartCheckbox" class="heart">
+                <i class="far fa-heart heart-empty"></i>
+                <i class="fas fa-heart heart-filled gradient"></i>
+                </label>
             </div>
         </div>
         <div class="enter">
