--- a/site_production/index.html
+++ b/site_production/index.html
@@ -186,7 +186,7 @@
                 <p>Mentions légales</p>
             </div>
             <div class="footer__contact">
-                <p>Contact</p>
+                <a href="mailto:ohmyfood@contact.fr">Contact</a>
             </div>
         </div>
     </footer>
