--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -198,7 +198,7 @@
                 <p>Mentions légales</p>
             </div>
             <div class="footer__contact">
-                <p>Contact</p>
+                <a href="mailto:ohmyfood@contact.fr">Contact</a>
             </div>
         </div>
     </footer>
