--- a/site_production/restaurants/page_menu_2.html
+++ b/site_production/restaurants/page_menu_2.html
@@ -186,19 +186,21 @@
     <footer>
         <div class="footer">
             <p class="footer__title">ohmyfood</p>
-            <div class="footer__restaurant">
-                <i class="fa-solid fa-utensils"></i>
-                <p>Proposer un restaurant</p>
-            </div>
-            <div class="footer__partner">
-                <i class="fa-solid fa-handshake"></i>
-                <p>Devenir partenaire</p>
-            </div>
-            <div class="footer__mentions">
-                <p>Mentions légales</p>
-            </div>
-            <div class="footer__contact">
-                <a href="mailto:ohmyfood@contact.fr">Contact</a>
+            <div class="footer__container">
+                <div class="footer__container__restaurant">
+                    <i class="fa-solid fa-utensils"></i>
+                    <p>Proposer un restaurant</p>
+                </div>
+                <div class="footer__container__partner">
+                    <i class="fa-solid fa-handshake"></i>
+                    <p>Devenir partenaire</p>
+                </div>
+                <div class="footer__container__mentions">
+                    <p>Mentions légales</p>
+                </div>
+                <div class="footer__container__contact">
+                    <a href="mailto:ohmyfood@contact.fr">Contact</a>
+                </div>
             </div>
         </div>
     </footer>
