changement adresse mail mailto

--- a/site_production/restaurants/page_menu_1.html
+++ b/site_production/restaurants/page_menu_1.html
@@ -199,7 +199,7 @@
                     <p>Mentions légales</p>
                 </div>
                 <div class="footer__container__contact">
-                    <a href="mailto:ohmyfood@contact.fr">Contact</a>
+                    <a href="mailto:contact@ohmyfood.fr">Contact</a>
                 </div>
             </div>
         </div>
