Finalisation des correction d'erreur W3c

--- a/restaurants/page_menu_1.html
+++ b/restaurants/page_menu_1.html
@@ -59,7 +59,7 @@
                             <span class="bold">25€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="enter-1"/>
+                    <input type="checkbox" id="enter-1">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Fin de la carte principal-->
@@ -73,7 +73,7 @@
                             <span class="bold">35€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="enter-2"/>
+                    <input type="checkbox" id="enter-2">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 1.3-->
@@ -86,7 +86,7 @@
                             <span class="bold">20€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="enter-3"/>
+                    <input type="checkbox" id="enter-3">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                             <span class="bold">40€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="dishes-1"/>
+                    <input type="checkbox" id="dishes-1">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.2-->
@@ -121,7 +121,7 @@
                             <span class="bold">35€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="dishes-2"/>
+                    <input type="checkbox" id="dishes-2">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 2.3-->
@@ -134,7 +134,7 @@
                             <span class="bold">44€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="dishes-3"/>
+                    <input type="checkbox" id="dishes-3">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                             <span class="bold">18€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="dessert-1"/>
+                    <input type="checkbox" id="dessert-1">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.2-->
@@ -169,7 +169,7 @@
                             <span class="bold">22€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="dessert-2"/>
+                    <input type="checkbox" id="dessert-2">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
                 <!--Carte 3.3-->
@@ -182,7 +182,7 @@
                             <span class="bold">23€</span>
                         </span>
                     </label>
-                    <input type="checkbox" id="dessert-3"/>
+                    <input type="checkbox" id="dessert-3">
                     <i class="fa-solid fa-circle-check"></i>
                 </div>
             </div>
