--- a/index.html
+++ b/index.html
@@ -82,96 +82,95 @@
         <div class="restaurants__container__add">
             <!--Carte 1-->
             <article class="restaurants__cards__add">
-                <a href="./restaurants/page_menu_1.html">
-                        <div class="restaurants__cards__add__notif">
-                            <p>Nouveau</p>
-                        </div>
-                        <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                    
-                    <div class="restaurants__cards__description">
+                <div class="restaurants__cards__add__notif">
+                    <p>Nouveau</p>
+                </div>
+                <div class="restaurants__cards__description">
+                    <a href="./restaurants/page_menu_1.html">
+                        <img src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du restaurant La palette du goût">
                         <div class="restaurants__cards__description__text">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <div class="restaurants__cards__description__heart">
-                            <div class="heart__container">
-                                <input type="checkbox" id="heartCheckbox_1" class="heart__checkbox">
-                                <label for="heartCheckbox_1" class="heart">
+                    </a>
+                    <div class="restaurants__cards__description__heart">
+                        <div class="heart__container">
+                            <input type="checkbox" id="heartCheckbox_1" class="heart__checkbox">
+                            <label for="heartCheckbox_1" class="heart">
                                 <i class="far fa-heart heart-empty"></i>
                                 <i class="fas fa-heart heart-filled gradient"></i>
-                                </label>
-                            </div>
+                            </label>
                         </div>
                     </div>
-                </a>
+                </div>
             </article>
             <!--Carte 2-->
             <article class="restaurants__cards__add">
-                <a href="./restaurants/page_menu_2.html">
-                    <div class="restaurants__cards__add__notif">
-                        <p>Nouveau</p>
-                    </div>
-                    <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                    <div class="restaurants__cards__description">
+                <div class="restaurants__cards__add__notif">
+                    <p>Nouveau</p>
+                </div>
+                <div class="restaurants__cards__description">
+                    <a href="./restaurants/page_menu_2.html">
+                        <img src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant La note enchantée">
                         <div class="restaurants__cards__description__text">
-                            <h3>La note enchantée</h3>
+                            <h3>Le note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <div class="restaurants__cards__description__heart">
-                            <div class="heart__container">
-                                <input type="checkbox" id="heartCheckbox_2" class="heart__checkbox">
-                                <label for="heartCheckbox_2" class="heart">
+                    </a>
+                    <div class="restaurants__cards__description__heart">
+                        <div class="heart__container">
+                            <input type="checkbox" id="heartCheckbox_2" class="heart__checkbox">
+                            <label for="heartCheckbox_2" class="heart">
                                 <i class="far fa-heart heart-empty"></i>
                                 <i class="fas fa-heart heart-filled gradient"></i>
-                                </label>
-                            </div>
+                            </label>
                         </div>
                     </div>
-                </a>
+                </div>
             </article>
         </div>
         <div class="restaurants__container">
             <!--Carte 3-->
             <article class="restaurants__cards">
-                <a href="./restaurants/page_menu_3.html">
-                    <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                    <div class="restaurants__cards__description">
+                <div class="restaurants__cards__description">
+                    <a href="./restaurants/page_menu_3.html">
+                        <img src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du restaurant À la française">
                         <div class="restaurants__cards__description__text">
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <div class="restaurants__cards__description__heart">
-                            <div class="heart__container">
-                                <input type="checkbox" id="heartCheckbox_3" class="heart__checkbox">
-                                <label for="heartCheckbox_3" class="heart">
+                    </a>
+                    <div class="restaurants__cards__description__heart">
+                        <div class="heart__container">
+                            <input type="checkbox" id="heartCheckbox_3" class="heart__checkbox">
+                            <label for="heartCheckbox_3" class="heart">
                                 <i class="far fa-heart heart-empty"></i>
                                 <i class="fas fa-heart heart-filled gradient"></i>
-                                </label>
-                            </div>
+                            </label>
                         </div>
                     </div>
-                </a>
+                </div>
             </article>
             <!--Carte 4-->
             <article class="restaurants__cards">
-                <a href="./restaurants/page_menu_4.html">
-                    <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant Ménilmontant">
-                    <div class="restaurants__cards__description">
+                <div class="restaurants__cards__description">
+                    <a href="./restaurants/page_menu_4.html">
+                        <img src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo du restaurant Le délice des sens">
                         <div class="restaurants__cards__description__text">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <div class="restaurants__cards__description__heart">
-                            <div class="heart__container">
-                                <input type="checkbox" id="heartCheckbox_4" class="heart__checkbox">
-                                <label for="heartCheckbox_4" class="heart">
+                    </a>
+                    <div class="restaurants__cards__description__heart">
+                        <div class="heart__container">
+                            <input type="checkbox" id="heartCheckbox_4" class="heart__checkbox">
+                            <label for="heartCheckbox_4" class="heart">
                                 <i class="far fa-heart heart-empty"></i>
                                 <i class="fas fa-heart heart-filled gradient"></i>
-                                </label>
-                            </div>
+                            </label>
                         </div>
                     </div>
-                </a>
+                </div>
             </article>
         </div>
     </section>
